--- a/.github/workflows/_run-terraform-command.yml
+++ b/.github/workflows/_run-terraform-command.yml
@@ -48,6 +48,7 @@ jobs:
 
       - name: Create TF-Backend S3 Bucket
         run: |
+          pwd
           chmod +x ./utils/create-s3-bucket.sh
           ./utils/create-s3-bucket.sh ${{ inputs.TF_STATE_BUCKET_NAME }}
 
