--- a/.github/workflows/_run-terraform-command.yml
+++ b/.github/workflows/_run-terraform-command.yml
@@ -58,6 +58,11 @@ jobs:
           chmod +x ./utils/create-dyndb-table.sh
           ./utils/create-dyndb-table.sh ${{ inputs.TF_LOCK_TABLE_NAME }}
 
+      - name: Setup Terraform
+      - uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.1.7
+
       - name: Terraform Init
         run: |
           cd ${{ inputs.TF_FILES_PATH }} && terraform init \
